--- a/UbiGame_Blank/UbiGame.vcxproj
+++ b/UbiGame_Blank/UbiGame.vcxproj
@@ -165,6 +165,7 @@ XCOPY "$(SolutionDir)..\SFML-2.5.0\bin" "$(TargetDir)" /S /Y /I</Command>
   <ItemGroup>
     <ClCompile Include="Source\GameEngine\EntitySystem\Components\EnemyMovementComponent.cpp" />
     <ClCompile Include="Source\GameEngine\EntitySystem\Components\HookComponent.cpp" />
+    <ClCompile Include="Source\GameEngine\EntitySystem\Components\NetComponent.cpp" />
     <ClCompile Include="Source\GameEngine\EntitySystem\Components\PlayerAbilityComponent.cpp" />
     <ClCompile Include="Source\GameEngine\EntitySystem\Components\PlayerMovementComponent.cpp" />
     <ClCompile Include="Source\GameEngine\EntitySystem\Components\TextRenderComponent.cpp" />
