--- a/UbiGame_Blank/UbiGame.vcxproj.filters
+++ b/UbiGame_Blank/UbiGame.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="Source\GameEngine\EntitySystem\Components\EnemyMovementComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\GameEngine\EntitySystem\Components\NetComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\GameEngine\GameEngineMain.h">
